overflow-x fixed

--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,11 @@
   font-size: 1.2rem;
 }
 
+
 body {
   background-color: rgb(255, 255, 255);
   line-height: 1.3 !important;
+  max-width: 1580px;
 }
 
 .box {
@@ -33,7 +35,7 @@ body {
 }
 
 .left-content {
-  padding: 1rem 1rem;
+  padding: 1.5rem 1rem;
 }
 
 .profile {
@@ -46,7 +48,7 @@ body {
   border-radius: 50%;
   border: 1px solid #8d8dff;
   display: block;
-  margin:auto;
+  margin: auto;
   margin-top: 40px;
 }
 
@@ -137,7 +139,7 @@ body {
   border-radius: 12px;
 }
 
-.skills-section li .info span{
+.skills-section li .info span {
   font-weight: 500;
   font-size: 17px;
   opacity: 0;
@@ -145,7 +147,7 @@ body {
 }
 
 @keyframes showText {
-  100%{
+  100% {
     opacity: 1;
   }
 }
@@ -158,105 +160,108 @@ body {
   transform-origin: left;
   border-radius: 10px;
   box-shadow: inset 0 1px 1px rgba(136, 33, 33, 0.05),
-              0 1px rgba(255,255,255,0.8);
-  animation: animate 1s cubic-bezier(1,0,0.5,1) forwards;
+    0 1px rgba(255, 255, 255, 0.8);
+  animation: animate 1s cubic-bezier(1, 0, 0.5, 1) forwards;
 }
+
 @keyframes animate {
-  100%{
+  100% {
     transform: scaleX(1);
   }
 }
-li .progress-bar span{
+
+li .progress-bar span {
   height: 100%;
   position: absolute;
   border-radius: 10px;
   transform: scaleX(0);
   transform-origin: left;
   background: #147EBB;
-  animation: animate 1s 1s cubic-bezier(1,0,0.5,1) forwards;
+  animation: animate 1s 1s cubic-bezier(1, 0, 0.5, 1) forwards;
 }
+
 .js-progress span {
   width: 75%;
 }
 
-.py-progress span{
+.py-progress span {
   width: 50%;
 }
 
-.ht-progress span{
+.ht-progress span {
   width: 75%;
 }
 
-.wo-progress span{
+.wo-progress span {
   width: 70%;
 }
 
-.sq-progress span{
+.sq-progress span {
   width: 60%;
 }
 
-.mo-progress span{
+.mo-progress span {
   width: 60%;
 }
 
-.re-progress span{
+.re-progress span {
   width: 70%;
 }
 
-.nj-progress span{
+.nj-progress span {
   width: 50%;
 }
 
-.ts-progress span{
+.ts-progress span {
   width: 45%;
 }
 
-.in-progress span{
+.in-progress span {
   width: 100%;
 }
 
-.es-progress span{
+.es-progress span {
   width: 100%;
 }
 
-.gi-progress span{
+.gi-progress span {
   width: 70%;
 }
 
-.no-progress span{
+.no-progress span {
   width: 80%;
 }
 
-.ta-progress span{
+.ta-progress span {
   width: 50%;
 }
 
-.sa-progress span{
-  width: 50%;
+.sa-progress span {
+  width: 60%;
 }
 
-.bo-progress span{
+.bo-progress span {
   width: 80%;
 }
 
-.ta-progress span{
+.ta-progress span {
   width: 50%;
 }
 
-.qa-progress span{
+.qa-progress span {
   width: 35%;
 }
 
-.qa-progress-1 span{
+.qa-progress-1 span {
   width: 35%;
 }
 
-.aw-progress-1 span{
-  width: 40%;
+.aw-progress-1 span {
+  width: 50%;
 }
 
 /* flechita porcentaje*/
-.progress span::before{
+.progress span::before {
   position: absolute;
   content: "";
   top: -5px;
@@ -270,8 +275,9 @@ li .progress-bar span{
   opacity: 0;
   animation: showText2 0.5s 1.5s linear forwards;
 }
+
 /* numero porcentaje */
-.progress span::after{
+.progress span::after {
   position: absolute;
   top: -30px;
   right: -30px;
@@ -286,7 +292,7 @@ li .progress-bar span{
 }
 
 @keyframes showText2 {
-  100%{
+  100% {
     opacity: 1;
   }
 }
@@ -295,81 +301,82 @@ li .progress-bar span{
   content: "75%";
 }
 
-.progress.py-progress span::after{
+.progress.py-progress span::after {
   content: "50%";
 }
 
-.ht-progress  span::after{
+.ht-progress span::after {
   content: "75%";
 }
 
-.wo-progress  span::after{
+.wo-progress span::after {
   content: "70%";
 }
 
-.sq-progress span::after{
+.sq-progress span::after {
   content: "60%";
 }
 
-.mo-progress span::after{
+.mo-progress span::after {
   content: "60%";
 }
 
-.re-progress span::after{
+.re-progress span::after {
   content: "70%";
 }
 
-.nj-progress span::after{
+.nj-progress span::after {
   content: "50%";
 }
 
-.ts-progress span::after{
+.ts-progress span::after {
   content: "45%";
 }
 
-.progress.in-progress span::after{
+.progress.in-progress span::after {
   content: "100%";
 }
 
-.es-progress span::after{
+.es-progress span::after {
   content: "100%";
 }
 
-.gi-progress span::after{
+.gi-progress span::after {
   content: "70%";
 }
 
-.no-progress span::after{
+.no-progress span::after {
   content: "80%";
 }
 
-.ta-progress span::after{
+.ta-progress span::after {
   content: "50%";
 }
 
-.sa-progress span::after{
-  content: "50%";
+.sa-progress span::after {
+  content: "60%";
 }
 
-.bo-progress span::after{
+.bo-progress span::after {
   content: "80%";
 }
 
-.ta-progress span::after{
+.ta-progress span::after {
   content: "50%";
 }
 
-.qa-progress span::after{
+.qa-progress span::after {
   content: "40%";
 }
 
-.qa-progress-1 span::after{
+.qa-progress-1 span::after {
   content: "40%";
 }
 
-.aw-progress-1 span::after{
-  content: "40%";
+.aw-progress-1 span::after {
+  content: "50%";
 }
+
 /*  */
 
 .skill-title {
@@ -380,11 +387,12 @@ li .progress-bar span{
 
 .right-tl-content {
   display: grid;
-  grid-template-columns: 750px;
   color: #404040;
 }
+
 .right-main-content {
-  padding: 1.5rem;
+  padding: 1.5rem 1rem 0 1rem;
+  height: auto;
 }
 
 .right-title-about {
@@ -412,6 +420,7 @@ li .progress-bar span{
   font-size: 1.2rem;
   letter-spacing: 0.1rem;
   color: #404040;
+  padding-right: 10px;
 }
 
 .right-title-experience,
@@ -445,6 +454,7 @@ li .progress-bar span{
   background-color: #2d9cdb;
   right: 0;
 }
+
 .para-experience {
   line-height: 1.2rem;
   justify-content: justify;
@@ -477,7 +487,7 @@ li .progress-bar span{
   text-transform: uppercase;
 }
 
-.left-tl-content{
+.left-tl-content {
   margin-right: 1rem;
 }
 
@@ -519,6 +529,6 @@ a {
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   color: #cc8dff;
 }
